Prevent zoom out at initial zoom level. Address issue of completed puzzles not snapping into solving area due to a gap in the connection logic (needs more testing).

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -129,7 +129,7 @@ label {
 
 #solved-puzzle-area {
     position: absolute;
-    border: 10px solid #000;
+    border: 2px solid #000;
 }
 
 #image-preview {
